--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
     "graphql": "^15.5.3",
     "node-sass": "^6.0.1",
