--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@reduxjs/toolkit": "^1.6.0",
@@ -12,6 +13,7 @@
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
     "form-data": "^4.0.0",
+    "framer-motion": "^4.1.17",
     "graphql": "^15.5.3",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
