--- a/appspec.yml
+++ b/appspec.yml
@@ -4,6 +4,10 @@ files:
   - source: /build
     destination: /home/ubuntu/findTutorFrontEnd/build
 hooks:
+  BeforeInstall:
+    - location: scripts/before_install.sh
+      timeout: 300
+      runas: root
   AfterInstall:
     - location: scripts/after_install.sh
       timeout: 300
