--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.2.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.12.1",
     "react-icons": "^4.2.0",
     "react-redux": "^7.2.4",
