--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/preset-env": "^7.15.8",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/register": "^7.15.3",
     "@loadable/component": "^5.15.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/lab": "^4.0.0-alpha.60",
@@ -12,9 +15,11 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
     "dayjs": "^1.10.7",
+    "express": "^4.17.1",
     "form-data": "^4.0.0",
     "framer-motion": "^4.1.17",
     "graphql": "^15.5.3",
+    "ignore-styles": "^5.0.1",
     "node-sass": "^6.0.1",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
